--- a/index.html
+++ b/index.html
@@ -10,11 +10,69 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css">
 
+    <!-- FONT AWESOME CSS -->
+    <link rel="stylesheet" href="assets/vendor/css/all.min.css">
+
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="row align-items-center">
+                <!-- LOGO AND COLLAPSE BUTTON  -->
+                <div class="col-lg-2">
+                    <div class="row align-items-center">
+                        <div class="col-lg-12 col-9">
+                            <div class="logo-container">
+                                <img src="assets/img/logo.png" alt="logo">
+                            </div>
+                        </div>
+        
+                        <div class="col-3 d-lg-none d-flex justify-content-end">
+                            <button class="btn btn-custom" type="button" data-bs-toggle="offcanvas" data-bs-target="#nav-menu" aria-controls="nav-menu">
+                                <i class="fa-solid fa-bars"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- NAVBAR MENU -->
+                <div class="col-lg-10">
+                    <div class="navbar p-0 navbar-expand-lg">
+                        <div class="offcanvas offcanvas-start" tabindex="-1" id="nav-menu" aria-labelledby="nav-menuLabel">
+                            <div class="offcanvas-header">
+                                <img class="offcanvas-title" id="nav-menuLabel" src="assets/img/logo.png" alt="logo">
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav ms-auto">
+                                    <li class="nav-item">
+                                        <a href="#">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#feature-section">Key Features</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#price-section">Pricing</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#testimonial-section">Testiminial</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#FAQ-section">FAQ</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="btn-custom" href="#">try for free</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
+        </div>
+    </header>
 
     <main></main>
 
