updated second time

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css">
 
-    <!-- FONT AWESOME CSS -->
-    <link rel="stylesheet" href="assets/vendor/css/all.min.css">
-
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -46,7 +43,7 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                                <ul class="navbar-nav ms-auto">
+                                <ul class="navbar-nav ms-auto align-items-center">
                                     <li class="nav-item">
                                         <a href="#">Home</a>
                                     </li>
