--- a/index.html
+++ b/index.html
@@ -1,94 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css">
+        <!-- BOOTSTRAP CSS -->
+        <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css" />
 
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- LOGO AND COLLAPSE BUTTON  -->
-                <div class="col-lg-2">
-                    <div class="row align-items-center">
-                        <div class="col-lg-12 col-9">
-                            <div class="logo-container">
-                                <img src="assets/img/logo.png" alt="logo">
+        <!-- BOOTSTRAP CSS -->
+        <link rel="stylesheet" href="assets/vendor/css/tiny-slider.css" />
+
+        <!-- CUSTOM CSS -->
+        <link rel="stylesheet" href="assets/css/style.css" />
+    </head>
+    <body>
+        <header>
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <!-- LOGO AND COLLAPSE BUTTON  -->
+                    <div class="col-lg-2">
+                        <div class="row align-items-center">
+                            <div class="col-lg-12 col-9">
+                                <div class="logo-container">
+                                    <img src="assets/img/logo.png" alt="logo" />
+                                </div>
                             </div>
-                        </div>
-        
-                        <div class="col-3 d-lg-none d-flex justify-content-end">
-                            <button class="btn btn-custom" type="button" data-bs-toggle="offcanvas" data-bs-target="#nav-menu" aria-controls="nav-menu">
-                                <i class="fa-solid fa-bars"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- NAVBAR MENU -->
-                <div class="col-lg-10">
-                    <div class="navbar p-0 navbar-expand-lg">
-                        <div class="offcanvas offcanvas-start" tabindex="-1" id="nav-menu" aria-labelledby="nav-menuLabel">
-                            <div class="offcanvas-header">
-                                <img class="offcanvas-title" id="nav-menuLabel" src="assets/img/logo.png" alt="logo">
-                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body">
-                                <ul class="navbar-nav ms-auto align-items-center">
-                                    <li class="nav-item">
-                                        <a href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#feature-section">Key Features</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#price-section">Pricing</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#testimonial-section">Testiminial</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#FAQ-section">FAQ</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="btn-custom" href="#">try for free</a>
-                                    </li>
-                                </ul>
+                            <div class="col-3 d-lg-none d-flex justify-content-end">
+                                <button class="btn btn-custom" type="button" data-bs-toggle="offcanvas" data-bs-target="#nav-menu" aria-controls="nav-menu">
+                                    <i class="fa-solid fa-bars"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
+
+                    <!-- NAVBAR MENU -->
+                    <div class="col-lg-10">
+                        <div class="navbar p-0 navbar-expand-lg">
+                            <div class="offcanvas offcanvas-start" tabindex="-1" id="nav-menu" aria-labelledby="nav-menuLabel">
+                                <div class="offcanvas-header">
+                                    <img class="offcanvas-title" id="nav-menuLabel" src="assets/img/logo.png" alt="logo" />
+                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    <ul class="navbar-nav m-auto align-items-center">
+                                        <li class="nav-item">
+                                            <a href="#">rent</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#feature-section">share</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#price-section">ride</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="#testimonial-section">services</a>
+                                        </li>
+                                    </ul>
+                                    <a class="sign-up-btn" href="#">sign up</a>
+                                    <a class="btn-custom" href="#">sign in</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>  
-        </div>
-    </header>
+            </div>
+        </header>
 
-    <main></main>
+        <main>
+            <!-- -----------------HERO SECTION START------------------- -->
+            <section id="hero-section">
+                <div class="container">
+                    <div class="row">
+                        <!-- HERO SECTION CONTENT -->
+                        <div class="col-xl-6">
+                            <div class="hero-content">
+                                <h1>quickest and safest journey</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem ipsa consequatur veniam qui facere voluptatem quidem ratione.</p>
+                                <a href="#" class="btn-custom">book a ride</a>
+                            </div>
+                        </div>
 
-    <footer></footer>
+                        <!-- <div class="col-xl-5"></div> -->
 
+                        <!-- HERO SECTION SLIDER -->
+                        <div class="col-xl-6">
+                            <div class="my-slider">
+                                <!-- <div class="my-slider"> -->
+                                <img src="assets/img/hero-img/hero-img-1.png" alt="slider-img-1" />
+                                <img src="assets/img/hero-img/hero-img-2.png" alt="slider-img-2" />
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
-    <!-- jquery JS -->
-    <script src="assets/vendor/js/jquery.min.js"></script>
+        <footer></footer>
 
-    <!-- BOOTSTRAP JS  -->
-    <script src="assets/vendor/js/bootstrap.min.js"></script>
+        <!-- jquery JS -->
+        <script src="assets/vendor/js/jquery.min.js"></script>
 
-    <!-- JS -->
-    <script src=""></script>
+        <!-- BOOTSTRAP JS  -->
+        <script src="assets/vendor/js/bootstrap.min.js"></script>
 
-    <!-- JS -->
-    <script src=""></script>
+        <!-- TINY SLIDER JS -->
+        <script src="assets/vendor/js/tiny-slider.js"></script>
 
-    <!-- CUSTOM JS -->
-    <script src="assets/js/main.js"></script>
-</body>
+        <!-- JS -->
+        <script src=""></script>
+
+        <!-- CUSTOM JS -->
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
