footer and app section added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <!-- BOOTSTRAP CSS -->
         <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css" />
 
-        <!-- BOOTSTRAP CSS -->
+        <!-- TINY-SLIDER CSS -->
         <link rel="stylesheet" href="assets/vendor/css/tiny-slider.css" />
+
+        <!-- FONT AWESOME CSS
+        <link rel="stylesheet" href="assets/vendor/css/" /> -->
 
         <!-- CUSTOM CSS -->
         <link rel="stylesheet" href="assets/css/style.css" />
@@ -88,19 +91,197 @@
 
                         <!-- HERO SECTION SLIDER -->
                         <div class="col-xl-6">
-                            <div class="my-slider">
-                                <!-- <div class="my-slider"> -->
-                                <img src="assets/img/hero-img/hero-img-1.png" alt="slider-img-1" />
-                                <img src="assets/img/hero-img/hero-img-2.png" alt="slider-img-2" />
-                                <!-- </div> -->
+                            <div class="hero-slider">
+                                <div class="my-slider">
+                                    <div class="single-img">
+                                        <img src="assets/img/hero-img/hero-img-1.png" alt="slider-img-1" />
+                                    </div>
+                                    <div class="single-img">
+                                        <img src="assets/img/hero-img/hero-img-2.png" alt="slider-img-2" />
+                                    </div>
+                                </div>
+                                <div class="car-container">
+                                    <img src="assets/img/hero-img/car.png" alt="" class="car-img" />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <section id="booking-section">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-10">
+                            <div class="select-proccess">
+                                <div class="row align-items-center">
+                                    <div class="col-xl-3 d-flex align-items-center">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <select class="form-select" aria-label="Default select example">
+                                            <option disabled selected>Choose a Location</option>
+                                            <option value="1">Dhaka</option>
+                                            <option value="2">Khulna</option>
+                                            <option value="3">Bangladesh</option>
+                                            <option value="3">Tokyo</option>
+                                            <option value="3">Turkey</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-xl-3 d-flex align-items-center">
+                                        <i class="fa-regular fa-calendar-day"></i>
+                                        <select class="form-select" aria-label="Default select example">
+                                            <option selected disabled>Pick-up date</option>
+                                            <option value="1">5</option>
+                                            <option value="2">10</option>
+                                            <option value="3">15</option>
+                                            <option value="4">20</option>
+                                            <option value="5">25</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-xl-3 d-flex align-items-center">
+                                        <i class="fa-regular fa-calendar-day"></i>
+                                        <select class="form-select" aria-label="Default select example">
+                                            <option selected disabled>Return date</option>
+                                            <option value="1">1</option>
+                                            <option value="2">5</option>
+                                            <option value="3">10</option>
+                                            <option value="4">15</option>
+                                            <option value="5">20</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-xl-3 d-flex align-items-center">
+                                        <a href="#" class="btn-custom ms-auto">search</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!------------!-------------- APP SECTION START -------------!------------>
+            <section id="app-section">
+                <div class="app-bg mx-auto">
+                    <div class="container">
+                        <div class="row justify-content-between">
+                            <div class="col-xl-6">
+                                <div class="app-content">
+                                    <h2>Download the free Quickcab App</h2>
+                                    <span class="app-subtitle">for Quicker, Easier and on time services</span>
+
+                                    <div class="download-btn">
+                                        <a href="#"><img src="assets/img/app/app-store-btn.png" alt="" /></a>
+                                        <a href="#"><img src="assets/img/app/play-store-btn.png" alt="" /></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-3">
+                                <div class="app-screenshot">
+                                    <img src="./assets/img/app/screenshot.png" alt="" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!------------!-------------- APP SECTION END -------------!------------>
         </main>
 
-        <footer></footer>
+        <!------------!-------------- FOOTER SECTION START -------------!------------>
+        <footer>
+            <div class="container">
+                <!-- ! FOOTER TOP START HERE ! -->
+                <div class="footer-top">
+                    <div class="row justify-content-between">
+                        <div class="col-xl-2">
+                            <div class="footer-widget">
+                                <h3>Quick Links</h3>
+                                <ul>
+                                    <li><a href="#">Rent</a></li>
+                                    <li><a href="#">SHARE</a></li>
+                                    <li><a href="#">connect</a></li>
+                                    <li><a href="#">ride</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-2">
+                            <div class="footer-widget">
+                                <h3>company</h3>
+                                <ul>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-2">
+                            <div class="footer-widget">
+                                <h3>Products</h3>
+                                <ul>
+                                    <li><a href="#">Drive</a></li>
+                                    <li><a href="#">Eat</a></li>
+                                    <li><a href="#">Business</a></li>
+                                    <li><a href="#">Global citizenship</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-5">
+                            <!-- ! SUBSCRIBE AND SOCIAL ICONS HERE ! -->
+                            <div class="footer-widget">
+                                <h3>WANT TO SEE MORE</h3>
+                                <div class="subscribe">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    <input type="email" name="email" id="email" placeholder="Enter your email address" />
+                                    <button type="submit" class="btn-custom">subscribe us</button>
+                                </div>
+
+                                <div class="socials">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                    <i class="fa-brands fa-twitter"></i>
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                    <i class="fa-brands fa-instagram"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ! FOOTER TOP ENDS HERE ! -->
+
+                <!-- ! FOOTER BOTTOM STARTS HERE ! -->
+                <div class="footer-bottom">
+                    <div class="row align-items-end">
+                        <div class="col-xl-2">
+                            <div class="logo">
+                                <img src="assets/img/logo-2.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <span class="copyright"> © 2020 Quickcab Inc. </span>
+                        </div>
+
+                        <div class="col-xl-6">
+                            <div class="footer-nav">
+                                <ul class="d-flex justify-content-end">
+                                    <li><a href="#">privacy</a></li>
+                                    <li><a href="#">accessibilty</a></li>
+                                    <li><a href="#">terms</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ! FOOTER BOTTOM ENDS HERE ! -->
+            </div>
+        </footer>
+        <!------------!-------------- FOOTER SECTION END -------------!------------>
 
         <!-- jquery JS -->
         <script src="assets/vendor/js/jquery.min.js"></script>
@@ -112,7 +293,7 @@
         <script src="assets/vendor/js/tiny-slider.js"></script>
 
         <!-- JS -->
-        <script src=""></script>
+        <script src="assets/vendor/js/all.min.js"></script>
 
         <!-- CUSTOM JS -->
         <script src="assets/js/main.js"></script>
