--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <title>QuickCab</title>
+        <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
 
         <!-- BOOTSTRAP CSS -->
         <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css" />
