guide section added

--- a/index.html
+++ b/index.html
@@ -161,6 +161,39 @@
                 </div>
             </section>
 
+            <!------------!-------------- GUIDE SECTION START -------------!------------>
+            <section id="guide-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="section-heading">
+                                <span class="guide-subtitle">Are you finding booking option</span>
+                                <h2>Book a Quickcab in just 4 steps</h2>
+                                <img src="assets/img/guide/guide-img-car.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-3">
+                            <div class="guide-mobile">
+                                <img src="assets/img/guide/guide-img-mobile.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="steps">
+                                <ol>
+                                    <li>Choose your destination</li>
+                                    <li>Apply coupon code</li>
+                                    <li>Confirm your booking</li>
+                                    <li>Get a Quickcab quickly</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!------------!-------------- GUIDE SECTION END -------------!------------>
+
             <!------------!-------------- APP SECTION START -------------!------------>
             <section id="app-section">
                 <div class="app-bg mx-auto">
