service section added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                             <a href="#price-section">ride</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="#testimonial-section">services</a>
+                                            <a href="#service-section">services</a>
                                         </li>
                                     </ul>
                                     <a class="sign-up-btn" href="#">sign up</a>
@@ -160,6 +160,55 @@
                     </div>
                 </div>
             </section>
+
+            <!------------!-------------- SERVICE SECTION START -------------!------------>
+            <section id="service-section">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-xl-5">
+                            <div class="service-img d-flex justify-content-end">
+                                <img src="assets/img/service/car.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-6">
+                            <div class="service-content">
+                                <div class="section-heading">
+                                    <span class="service-subtitle">best services</span>
+                                    <h2>Wonderful experience with our best deals</h2>
+                                </div>
+
+                                <div class="services">
+                                    <div class="single-service">
+                                        <img src="assets/img/service/service-icon-1.png" alt="" />
+                                        <div class="single-service-details">
+                                            <h3>We always offer happy discounts!</h3>
+                                            <span class="single-service-subtitle"> Select your desire time and date. </span>
+                                        </div>
+                                    </div>
+
+                                    <div class="single-service">
+                                        <img src="assets/img/service/service-icon-2.png" alt="" />
+                                        <div class="single-service-details">
+                                            <h3>We are always on your time.</h3>
+                                            <span class="single-service-subtitle"> Select your desire time and date. </span>
+                                        </div>
+                                    </div>
+
+                                    <div class="single-service">
+                                        <img src="assets/img/service/service-icon-3.png" alt="" />
+                                        <div class="single-service-details">
+                                            <h3>Your safety is our 1st priority :)</h3>
+                                            <span class="single-service-subtitle"> Select your desire time and date. </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!------------!-------------- SERVICE SECTION END -------------!------------>
 
             <!------------!-------------- GUIDE SECTION START -------------!------------>
             <section id="guide-section">
