process section added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!-- TINY-SLIDER CSS -->
         <link rel="stylesheet" href="assets/vendor/css/tiny-slider.css" />
 
-        <!-- FONT AWESOME CSS
-        <link rel="stylesheet" href="assets/vendor/css/" /> -->
+        <!-- FONT AWESOME CSS -->
+        <link rel="stylesheet" href="assets/vendor/css/all.min.css" />
 
         <!-- CUSTOM CSS -->
         <link rel="stylesheet" href="assets/css/style.css" />
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-xl-10">
-                            <div class="select-proccess">
+                            <div class="select-process">
                                 <div class="row align-items-center">
                                     <div class="col-xl-3 d-flex align-items-center">
                                         <i class="fa-solid fa-location-dot"></i>
@@ -160,6 +160,49 @@
                     </div>
                 </div>
             </section>
+
+            <!------------!-------------- PROCESS(HOW IT WORKS) SECTION START -------------!------------>
+            <section id="process-section">
+                <div class="container">
+                    <div class="section-heading text-center">
+                        <span class="process-subtitle">HOW IT WORKS</span>
+                        <h2>Quickcab following 3 quick steps</h2>
+                    </div>
+
+                    <div class="process-container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-3">
+                                <div class="single-process">
+                                    <div class="single-process-icon">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                    </div>
+                                    <h3>Choose a location</h3>
+                                    <p>Find your favorite location and choose it.</p>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="single-process">
+                                    <div class="single-process-icon second-icon">
+                                        <i class="fa-solid fa-calendar-check"></i>
+                                    </div>
+                                    <h3>Pick-up date</h3>
+                                    <p>Select your desire time and date.</p>
+                                </div>
+                            </div>
+                            <div class="col-xl-3">
+                                <div class="single-process">
+                                    <div class="single-process-icon last-icon">
+                                        <i class="fa-solid fa-car"></i>
+                                    </div>
+                                    <h3>Book your car</h3>
+                                    <p>See which car you have book!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!------------!-------------- PROCESS(HOW IT WORKS) SECTION END -------------!------------>
 
             <!------------!-------------- SERVICE SECTION START -------------!------------>
             <section id="service-section">
@@ -374,8 +417,8 @@
         <!-- TINY SLIDER JS -->
         <script src="assets/vendor/js/tiny-slider.js"></script>
 
-        <!-- JS -->
-        <script src="assets/vendor/js/all.min.js"></script>
+        <!-- FONT-AWESOME JS -->
+        <!-- <script src="assets/vendor/js/all.min.js"></script> -->
 
         <!-- CUSTOM JS -->
         <script src="assets/js/main.js"></script>
