experience-section added

--- a/index.html
+++ b/index.html
@@ -286,6 +286,70 @@
             </section>
             <!------------!-------------- GUIDE SECTION END -------------!------------>
 
+            <!------------!-------------- EXPERIENCE SECTION START -------------!------------>
+            <section id="experience-section">
+                <div class="container">
+                    <div class="section-heading">
+                        <span class="experience-subtitle">Why pepole trust on us</span>
+                        <h2>We ensure wonderful customer Experience</h2>
+                    </div>
+
+                    <!-- <div class="row"> -->
+                    <div class="top-row row">
+                        <div class="col-xl-4">
+                            <div class="single-experience left-stroke">
+                                <h3>Competetive Pricing</h3>
+                                <img src="assets/img/experience/experience-icon-1.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="single-experience">
+                                <h3>24x7 Availability</h3>
+                                <img src="assets/img/experience/experience-icon-2.png" alt="" />
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="single-experience right-stroke">
+                                <h3>Your Choice of Mechanism</h3>
+                                <img src="assets/img/experience/experience-icon-3.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="experience-car text-center">
+                        <img src="assets/img/cars/experience-section.png" alt="" />
+                    </div>
+
+                    <!-- BOTTOM ROW STARTS HERE -->
+                    <div class="bottom-row row">
+                        <div class="col-xl-4">
+                            <div class="single-experience left-stroke">
+                                <img src="assets/img/experience/experience-icon-4.png" alt="" />
+                                <h3>Most Flexible Payment</h3>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="single-experience">
+                                <img src="assets/img/experience/experience-icon-5.png" alt="" />
+                                <h3>Best Extended Awards</h3>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="single-experience right-stroke">
+                                <img src="assets/img/experience/experience-icon-6.png" alt="" />
+                                <h3>Best Customer Support</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- </div> -->
+                </div>
+            </section>
+            <!------------!-------------- EXPERIENCE SECTION END -------------!------------>
+
             <!------------!-------------- APP SECTION START -------------!------------>
             <section id="app-section">
                 <div class="app-bg mx-auto">
